--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,12 @@ steps:
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'eider_sonar_cloud'
-    scannerMode: 'Other'
+    organization: 'eidermauricio'
+    scannerMode: 'CLI'
+    configMode: 'manual'
+    cliProjectKey: 'key'
+    cliProjectName: 'name'
+    cliSources: '.'
 
 - task: Maven@3
   inputs:
