--- a/pom.xml
+++ b/pom.xml
@@ -163,5 +163,10 @@
 		<maven.failsafe.plugin.version>2.19.1</maven.failsafe.plugin.version>
 		<mockito.version>2.8.9</mockito.version>
 		<mavencompiler.version>3.6.1</mavencompiler.version>
+		
+		<sonar.projectKey>eidermauricio_restcalculator</sonar.projectKey>
+		<sonar.organization>eidermauricio</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.login>cb88b6dc1a76e54fe8d203d80846de4d8c88b0a4</sonar.login>		
 	</properties>
 </project>
