--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,3 +31,5 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+
+- task: SonarCloudAnalyze@1
