--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
 
 - task: SonarCloudPrepare@1
   inputs:
-    SonarCloud: 'eider_sonar_cloud'
+    SonarCloud: 'sonar_cloud_demo'
     organization: 'eidermauricio'
     scannerMode: 'Other'
 
