--- a/pom.xml
+++ b/pom.xml
@@ -116,10 +116,10 @@
 		<maven.compiler.target>1.11</maven.compiler.target>
 		<start-class>com.restcalculator.app.app</start-class>
 		
-		<sonar.coverage.jacoco.xmlReportPaths>build/reports/jococo/jococoTestReport/jacocoTestReport.xml</sonar.coverage.jacoco.xmlReportPaths>
-		<sonar.projectKey>eidermauricio_restcalculator</sonar.projectKey>
-		<sonar.organization>eidermauricio</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.login>594e80b4479b4397cafbc4c6659d000a6d45e109</sonar.login>
+		
+  		<sonar.projectKey>anenca2_restcalculator</sonar.projectKey>
+  		<sonar.organization>anenca2</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 	</properties>
 </project>
